# market-analysis

./: .gitignore  Data Analysis Approach.md  Thematic_Analysis.ipynb  agent_instructions.md  annotate_transcripts.ipynb  annotate_transcripts_2nd_pass.ipynb  annotations_script.ipynb  anonymize_survey_data.ipynb  append_snippets.ipynb  brand_analysis.ipynb  functions.json  process_transcripts.ipynb  pyproject.toml  sentiment_analysis.ipynb  sentiment_analysis_methodology.md  transcript_data_analysis.ipynb  transcripts to snapshots.ipynb  word frequency.ipynb
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: amazon.csv  annotations 12-29.csv  annotations-merged-12.29.csv  annotations.csv  annotations.json  carolina.csv  flinn.csv  merged_transcripts.csv  non_carolina.csv  snapshots.md  survey_data.csv  transcripts.csv  trust_themes.csv  trust_themes_anon.csv  trust_themes_anon.xlsx
data/annotations/: amanda.fuller@pikeroadschools.org.csv  bbesspashak@philasd.org.csv  bbesspashak@philasd.org.md  cchristensen@cbschools.net.csv  dawn.parker@rcsd.ms.csv  ekaretny@bhprsd.org.csv  gbuchsen@pasdedu.org.csv  gbuchsen@pasdedu.org.md  jhofeld@harrahschools.com.csv  jmagargal@upperdarbysd.org.csv  joemyers@npsne.org.csv  joemyers@npsne.org.md  kelda.bailess@vwsd.org.csv  kirsten.mahovlich@clevelandmetroschools.org.csv  libby.frost@decaturschools.org.csv  markniebojeski@paps.net.csv  mburdsall@danville.k12.in.us.csv  mburgos@sjpii.net.csv  nevans@philasd.org.csv  nevans@philasd.org.md  nmcgovern@pmsd.org.csv  pmckernan@troyusd.org.csv  pqmcgee@madison.k12.wi.us.csv  reade.burke@fortbendisd.com.csv  rmurray@eccrsd.us.csv  robert.lehman@pgcps.org.csv  robin.hurst@lyon.kyschools.us.csv  (+8 more)
(+50 files in other folders)
