[tool.poetry]
name = "market-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.1.1"
chromadb = "^0.4.22"
langchain-openai = "^0.0.3"
pandas = "^2.2.0"
langchain-experimental = "^0.0.49"
langserve = "^0.0.39"
langchain-cli = "^0.0.20"
matplotlib = "^3.8.2"
wordcloud = "^1.9.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
